--- a/src/components/calendar/Calendar.scss
+++ b/src/components/calendar/Calendar.scss
@@ -22,6 +22,7 @@
 }
 
 .calendar-cell {
+  font-family: "Montserrat", serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,6 +35,18 @@
 .header {
   font-weight: bold;
   background-color: #f9f9f9;
+  height: auto;
+}
+
+.general {
+  justify-content: right;
+  align-items: baseline;
+  &:not(.empty) {
+    cursor: pointer;
+    &:hover {
+      background-color: #dfdfdf;
+    }
+  }
 }
 
 .empty {
