--- a/src/components/months-selector/MonthSelector.scss
+++ b/src/components/months-selector/MonthSelector.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  font-family: Arial, sans-serif;
   font-size: 18px;
 }
 
@@ -22,11 +21,12 @@
 .month-display {
   cursor: pointer;
   padding: 5px 15px;
-  border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9;
   text-align: center;
-
+  font-family: "Playfair Display", serif;
+  font-weight: 900;
+  font-size: 2rem;
+  width: 250px;
   &:hover {
     background-color: #e9e9e9;
   }
@@ -48,7 +48,7 @@
   padding: 10px 20px;
   cursor: pointer;
   text-align: center;
-
+  font-family: "Lato", serif;
   &:hover {
     background-color: #f1f1f1;
   }
