--- a/src/components/balance/Balance.scss
+++ b/src/components/balance/Balance.scss
@@ -1,21 +1,24 @@
 .balance-container {
-  width: 90%;
-  border: 1px solid #ffb3c6;
-  margin: 1.5rem auto;
+  width: 95%;
+  border: 1px solid #090909;
+  margin: 1.8rem auto 0.7rem auto;
+  border-radius: 10px;
 }
 
 .balance-title {
   font-family: "Montserrat", serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-align: center;
-  background-color: #ffb3c6;
+  background-color: #090909;
+  color: white;
+  border-radius: 8px 8px 0 0;
   margin: 0;
-  padding: 0.2rem 0;
+  padding: 0.8rem 0;
 }
 
 .balance {
-  font-family: "Montserrat", serif;
+  font-family: "DM Mono", serif;
   font-size: 1.3rem;
-  font-weight: 400;
+  font-weight: 500;
   text-align: center;
 }
