--- a/src/components/wishlist/Wishlist.scss
+++ b/src/components/wishlist/Wishlist.scss
@@ -1,15 +1,18 @@
 .wishlist {
   width: 90%;
-  background-color: #fafafa;
+  background-color: #fff;
+  border: 1px solid #ebebeb;
   padding: 1rem;
-  border-radius: 5%;
+  border-radius: 8px;
+  margin: 0.75rem 0;
+  box-shadow: 1px 2px 13px -6px rgba(0, 0, 0, 0.1);
 }
 
 .wishlist-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "Montserrat", serif;
+  font-family: "Inter", serif;
 }
 
 .wishlist-title {
@@ -17,17 +20,18 @@
   margin: 0.5rem 0;
 }
 
-.add {
+.add-wish {
   font-size: 1.5rem;
   cursor: pointer;
   &:hover {
-    color: #ffb3c6;
+    color: #565656;
   }
 }
 
 .wish {
-  font-family: "Montserrat", serif;
+  font-family: "Inter", serif;
   font-size: 0.8rem;
+  font-weight: 600;
   display: grid;
   margin: 0.5rem auto;
   align-items: center;
@@ -35,9 +39,10 @@
 
   .amount {
     justify-self: end;
+    font-weight: 500;
+    font-family: "DM Mono", serif;
   }
   input[type="checkbox"] {
-    /* Hide the default checkbox appearance */
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -50,13 +55,11 @@
     cursor: pointer;
     transition: all 0.3s ease;
 
-    /* Checked state */
     &:checked {
       background-color: #4caf50;
       border-color: #4caf50;
       position: relative;
 
-      /* Add a custom checkmark */
       &:before {
         content: "";
         display: block;
@@ -71,7 +74,6 @@
       }
     }
 
-    /* Hover effect */
     &:hover {
       border-color: #555;
     }
